Fix menu items overflow

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@ html, body {
   height: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 /* Helpers */
 
 .clearfix:after {
@@ -30,18 +34,18 @@ html, body {
 
 .sidebar ul {
   display: block;
+  list-style-type: none;
   padding: 0;
   margin: 0;
-  list-style-type: none;
 }
 
 .sidebar ul li a {
   display: inline-block;
   width: 100%;
+  text-decoration: none;
   text-align: center;
   padding: 1.0em;
-  color: inherit;
-  text-decoration: none;
+  color: #ffffff;
 }
 
 .sidebar ul li a:hover {
@@ -51,16 +55,16 @@ html, body {
 /* Content wrapper */
 
 .content-wrapper {
-  background-color: #ffffff;
   height: 100%;
-  transition: margin-left .5s;
+  overflow: hidden;
+  transition: margin-left 0.5s;
 }
 
 /* Page content */
 
 .content {
   padding: 1.0em;
-  overflow-x: scroll;
+  overflow-y: scroll;
   height: 100%;
 }
 
